--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <div class="content">
     <div class="iframe-container">
-        <iframe id="iframe" src="http://edu1283321.z4cked.com/changelogs/">
+        <iframe id="iframe" src="http://edu1283321.z4cked.com/proxynote/">
             <script>
                 window.addEventListener('keydown', function(event) {
                     if (event.key === "Backspace") {
