--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
 <div class="sidebar">
     <button onclick="window.location.href='http://edu1283321.z4cked.com'"><- Back</button>
     <h3>---------------------</h3>
-    <button onclick="changeIframe('https://blvf.bege.ro/85058dd414e648c3b5d6a60f53864ccb/_rhsmkJys://s~-~.o66iMuq.uKi/')">Spotify</button>
+    <!-- <button onclick="changeIframe('https://blvf.bege.ro/85058dd414e648c3b5d6a60f53864ccb/_rhsmkJys://s~-~.o66iMuq.uKi/')">Spotify</button>
     <button onclick="changeIframe('https://blvf.bege.ro/39bd1773d79c4ca6a970fc9cf2a7c40a/_rhsoi6hW://mtGrLLOIHi.60S/')">Soundcloud</button>
-    <button onclick="changeIframe('https://blvf.bege.ro/39bd1773d79c4ca6a970fc9cf2a7c40a/https://www.youtube.com/')">YouTube (idk)</button>
+    <button onclick="changeIframe('https://blvf.bege.ro/39bd1773d79c4ca6a970fc9cf2a7c40a/https://www.youtube.com/')">YouTube (idk)</button> -->
+    
     <!-- Add more buttons here as needed -->
 </div>
 
